confetti has been properly added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </div>
       </center>
     </div>
-    
-  </body>
+    <center>
+      <img class="text-center" id="happy" src="https://media2.giphy.com/media/3bzts2S9lsmQ0H3L0B/giphy.gif?cid=e1bb72ff5adf99077132525a6b2ba182"></img>
+    </center>
+ </body>
 
 </html>
