--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       </center>
     </div>
     <center>
-      <img class="text-center" id="happy" src="https://media2.giphy.com/media/3bzts2S9lsmQ0H3L0B/giphy.gif?cid=e1bb72ff5adf99077132525a6b2ba182"></img>
+      <div id="minigame">
+        <img class="text-center" id="happy" src="https://media2.giphy.com/media/3bzts2S9lsmQ0H3L0B/giphy.gif?cid=e1bb72ff5adf99077132525a6b2ba182"></img>
+      </div>
     </center>
  </body>
 
